# toom

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py  0002_create_customer_returns.py  0003_create_inventory_tables.py  0004_shipping_sms_cleanup.py  0005_create_push_subscriptions.py
assets/branding/: README.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: 01_app.md  02_appdesign.md  adding_new_marketplace.md  architecture.md  backup.md  branding.md  deployment.md
scripts/: allegro_login.py  backup_db.sh  comcio-assistant.service  restore_db.sh  toom.service
src/app/: container.py  event_subscriptions.py  main.py
src/app/api/: auth.py  dependencies.py  errors.py  router.py  schemas.py
src/app/bot/: bot_instance.py  formatting.py
src/app/core/: config.py  logging.py
src/app/database/: base.py  engine.py
src/app/domain/: fulfillment.py
src/app/infrastructure/: composite_notifier.py
src/app/repositories/: sqlite_event_repository.py  sqlite_inventory_repository.py  sqlite_order_repository.py  sqlite_push_subscription_repository.py  sqlite_return_repository.py  sqlite_shipment_repository.py  sqlite_sms_history_repository.py  sqlite_token_store.py  (+2 more)
tests/: conftest.py
tests/fakes/: fake_bot.py  fake_inventory_repository.py  fake_marketplace_plugin.py  fake_notifier.py  fake_order_repository.py  fake_return_repository.py  fake_sms_history_repository.py  fake_sms_provider.py  fake_stock_sync_repository.py  fake_telegram_message_repository.py
(+115 files in other folders)
